k8s/components/common/manifests/ingressroute-http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-http-redirect
  namespace: microadventures
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`)
      kind: Rule
      services:
        - name: frontend
          port: 8080
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-http-redirect
  namespace: microadventures
spec:
  entryPoints:
    - web
  routes:
    - match: (Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`)) && PathPrefix(`/backend`)
      kind: Rule
      middlewares:
        - name: strip-api-prefixes
        - name: https-redirect
      services:
        - name: backend
          port: 8000
