k8s/components/common/manifests/ingressroute-https-selfsigned.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-https-selfsigned
  namespace: microadventures
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`) || Host(`localhost`)
      kind: Rule
      services:
        - name: frontend
          port: 8080
  tls:
    secretName: microadventures-tls-selfsigned
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-https-selfsigned
  namespace: microadventures
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`) || Host(`localhost`)) && PathPrefix(`/backend`)
      kind: Rule
      middlewares:
        - name: strip-api-prefixes
      services:
        - name: backend
          port: 8000
  tls:
    secretName: microadventures-tls-selfsigned
